--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@ If one only cares about whether the two coin have the same outcome, sample space
 
 4. Calculate the probability of  $\{H_1\}, \{H_1 H_2 or T_1T_2\}, \{H_1T_2 or T_1 H_2\}, \{T_1 H_2\}$
 
-The probability of  $\{H_1\}$ is simply equal to $\frac{1}{2}$ since the first coin toss is either heads or tails. The probability of $\{H_1 H_2 or T_1T_2\}$ is equal to the probability of $H_1, H_2$ plus the probability of $T_1, T_2$.
+The probability of  $\{H_1\}$ is simply equal to $\frac{1}{2}$ since the first coin toss is either heads or tails. The probability of $\{H_1 H_2 or T_1T_2\}$ is equal to the probability of $H_1, H_2$ plus the probability of $T_1, T_2$. The probability of $H_1, H_2$ is the probability of $H_1$ multiplied by the probability of $H_2$ which equals $\frac{1}{2}/cdot \frac{1}{2}$
 
 
 5. Suppose you work with the sample space S = $\{H_1 H_2, H_1T_2, T_1 H_2, T_1T_2\}$ , can you propose a partition of S?
